# ndkGRPC

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  clean.ps1  conanfile.txt  prebuild.ps1
node/: client.js
proto/: helloworld.proto
py/: client.py
src/: client.cpp  server.cpp
